# archery-gender-analysis

./: CITATION.cff  README.md  analysis.ipynb  general_routines.py  ianseo_scrape_single.py  main.py  plotting_routines.py  pyproject.toml
archery-gender-analysis/: __init__.py  general_routines.py  plotting.py
archery_gender_analysis/: __init__.py  general_routines.py  ianseo_scrape.py  main.py  plotting.py
data/: AGBNI11Scores.csv  AGBNI14Scores.csv  AGBNI15Scores.csv  AGBNI16Scores.csv  AGBNI17Scores.csv  AGBNI18Scores.csv  AGBNI19Scores.csv  AGBNI21Scores.csv  Nimes15Scores.csv  Nimes16Scores.csv  Nimes17Scores.csv  Nimes18Scores.csv  Nimes19Scores.csv  Nimes20Scores.csv  Nimes21Scores.csv  Nimes22Scores.csv
results/: .gitignore  AGB_NI_all_stats.txt  AGB_NI_delta_pos.txt  AGB_NI_raw_data.txt  AGB_NI_score_band_stats.txt  AGB_NI_t_test_results_all.txt  AGB_NI_t_test_results_bands.txt  Nimes_all_stats.txt  Nimes_delta_pos.txt  Nimes_raw_data.txt  Nimes_score_band_stats.txt  Nimes_t_test_results_all.txt  Nimes_t_test_results_bands.txt
